--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
     "motion": "^12.4.1",
     "next": "15.1.6",
     "react": "^19.0.0",
@@ -20,7 +21,7 @@
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8"
   }
 }
