--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.8",
+    "@vercel/analytics": "^1.5.0",
     "motion": "^12.4.1",
     "motion-plus": "^0.1.9",
     "next": "15.1.6",
