--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/adapter-better-sqlite3": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "@tailwindcss/postcss": "^4.1.8",
     "@vercel/analytics": "^1.5.0",
+    "dotenv": "^17.2.3",
     "motion": "^12.4.1",
     "motion-plus": "^0.1.9",
     "next": "15.1.9",
@@ -21,9 +24,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/node": "^25.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8.5.4",
+    "prisma": "^7.2.0",
     "tailwindcss": "^4.1.8"
   }
 }
